--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,4 +25,4 @@ jobs:
 
       - run: nix build .#docker
       
-      - run: skopeo copy docker-archive:result docker://ghcr.io/jmmaloney4/git-annex:latest --dest-creds ghcr.io/jmmaloney4:${{ secrets.GITHUB_TOKEN }}
+      - run: skopeo copy docker-archive:result docker://ghcr.io/jmmaloney4/sacd-extract:latest --dest-creds ghcr.io/jmmaloney4:${{ secrets.GITHUB_TOKEN }}
