--- a/garnix.yaml
+++ b/garnix.yaml
@@ -1,3 +1,5 @@
 builds:
   include:
-  - 'packages.*'
+  - 'packages.aarch64-darwin.*'
+  - 'packages.x86_64-linux.*'
+  - 'packages.aarch64-linux.*'
